--- a/data/rush/yugipedia975297.yaml
+++ b/data/rush/yugipedia975297.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, if you sent 2 Pyro, Aqua, and/or Thunder Type monsters to the Graveyard to meet the requirement, you can draw 1 card.
+    Draw 1 card. Then, if you sent 2 Pyro, Aqua, and/or Thunder Type monsters to the Graveyard to meet the requirement, you can draw 1 additional card.
   de:
   es:
   fr:
