--- a/data/cards/49195710.yaml
+++ b/data/cards/49195710.yaml
@@ -8,7 +8,7 @@ name:
   it: 'Numero C65: Re Overdemone'
   pt: 'Número C65: Rei Suprademônio'
   ja: <ruby>Ｃ<rt>カオス</rt></ruby><ruby>Ｎｏ．<rt>ナンバーズ</rt></ruby>６５ <ruby>裁<rt>さい</rt></ruby><ruby>断<rt>だん</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>王<rt>おう</rt></ruby>ジャッジ・デビル
-  ja_romaji: Kaosu Nanbāzu Rokujūgo Saidan Maō Jajji Debiru
+  ja_romaji: Kaosu Nanbāzu Rokujūgo Saidanmaō Jajji Debiru
   ko: <ruby>CNo.<rt>카오스 넘버즈</rt></ruby>65 재단마왕 저지 데블
   ko_rr:
   zh-TW:
