--- a/data/cards/10045474.yaml
+++ b/data/cards/10045474.yaml
@@ -68,6 +68,16 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: RA01-EN0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   de:
   - set_number: FLOD-DE077
     set_name: Flames of Destruction
@@ -97,6 +107,16 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: RA01-DE0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   fr:
   - set_number: FLOD-FR077
     set_name: Flames of Destruction
@@ -126,6 +146,16 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: RA01-FR0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   it:
   - set_number: FLOD-IT077
     set_name: Flames of Destruction
@@ -155,6 +185,16 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: RA01-IT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   pt:
   - set_number: FLOD-PT077
     set_name: Flames of Destruction
@@ -184,6 +224,16 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: RA01-PT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   ja:
   - set_number: FLOD-JP077
     set_name: Flames of Destruction
