--- a/data/cards/14558127.yaml
+++ b/data/cards/14558127.yaml
@@ -123,6 +123,16 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: RA01-EN0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   de:
   - set_number: MACR-DE036
     set_name: Maximum Crisis
@@ -164,6 +174,16 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: RA01-DE0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   fr:
   - set_number: MACR-FR036
     set_name: Maximum Crisis
@@ -205,6 +225,16 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: RA01-FR0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   it:
   - set_number: MACR-IT036
     set_name: Maximum Crisis
@@ -246,6 +276,16 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: RA01-IT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   pt:
   - set_number: MACR-PT036
     set_name: Maximum Crisis
@@ -287,6 +327,16 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: RA01-PT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   ja:
   - set_number: MACR-JP036
     set_name: Maximum Crisis
