--- a/data/cards/27204311.yaml
+++ b/data/cards/27204311.yaml
@@ -65,6 +65,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  - set_number: RA01-EN0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   de:
   - set_number: TN19-DE013
     set_name: 2019 Gold Sarcophagus Tin
@@ -86,6 +96,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  - set_number: RA01-DE0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   fr:
   - set_number: TN19-FR013
     set_name: 2019 Gold Sarcophagus Tin
@@ -107,6 +127,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  - set_number: RA01-FR0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   it:
   - set_number: TN19-IT013
     set_name: 2019 Gold Sarcophagus Tin
@@ -128,6 +158,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  - set_number: RA01-IT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   pt:
   - set_number: TN19-PT013
     set_name: 2019 Gold Sarcophagus Tin
@@ -149,6 +189,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  - set_number: RA01-PT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   ja:
   - set_number: EP19-JP067
     set_name: Extra Pack 2019
