--- a/data/cards/27548199.yaml
+++ b/data/cards/27548199.yaml
@@ -68,6 +68,16 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: RA01-EN0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   de:
   - set_number: SAST-DE037
     set_name: Savage Strike
@@ -82,6 +92,16 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: RA01-DE0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   fr:
   - set_number: SAST-FR037
     set_name: Savage Strike
@@ -96,6 +116,16 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: RA01-FR0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   it:
   - set_number: SAST-IT037
     set_name: Savage Strike
@@ -110,6 +140,16 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: RA01-IT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   pt:
   - set_number: SAST-PT037
     set_name: Savage Strike
@@ -124,6 +164,16 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: RA01-PT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   ja:
   - set_number: SAST-JP037
     set_name: Savage Strike
