--- a/data/cards/42166000.yaml
+++ b/data/cards/42166000.yaml
@@ -64,26 +64,76 @@ sets:
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Ultra Rare
+  - set_number: RA01-EN0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   de:
   - set_number: LED7-DE001
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Ultra Rare
+  - set_number: RA01-DE0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   fr:
   - set_number: LED7-FR001
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Ultra Rare
+  - set_number: RA01-FR0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   it:
   - set_number: LED7-IT001
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Ultra Rare
+  - set_number: RA01-IT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   pt:
   - set_number: LED7-PT001
     set_name: 'Legendary Duelists: Rage of Ra'
     rarities:
     - Ultra Rare
+  - set_number: RA01-PT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   ja:
   - set_number: DP24-JP001
     set_name: 'Duelist Pack: Duelists of Gloom'
