--- a/data/cards/57062206.yaml
+++ b/data/cards/57062206.yaml
@@ -44,10 +44,10 @@ series:
 images:
 - index: 1
   image: Doitsu-EE04-JP-C.jpg
-  illustration: Doitsu-LOD2-JP-VG-artwork.jpg
+  illustration: Doitsu-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: Doitsu-DR04-NA-C-UE.png
-  illustration: Doitsu-LOD2-EN-VG-artwork.jpg
+  illustration: Doitsu-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: CRV-EN025
