--- a/data/cards/84211599.yaml
+++ b/data/cards/84211599.yaml
@@ -51,6 +51,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA01-EN0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   - set_number: TBC1-EN011
     set_name: The Pot Collection
     rarities:
@@ -65,6 +75,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA01-DE0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   fr:
   - set_number: BLVO-FR065
     set_name: Blazing Vortex
@@ -75,6 +95,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA01-FR0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   it:
   - set_number: BLVO-IT065
     set_name: Blazing Vortex
@@ -85,6 +115,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA01-IT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   pt:
   - set_number: BLVO-PT065
     set_name: Blazing Vortex
@@ -95,6 +135,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA01-PT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   ja:
   - set_number: BLVO-JP065
     set_name: Blazing Vortex
