--- a/data/cards/84815190.yaml
+++ b/data/cards/84815190.yaml
@@ -65,6 +65,16 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: RA01-EN0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   de:
   - set_number: LED8-DE024
     set_name: 'Legendary Duelists: Synchro Storm'
@@ -75,6 +85,16 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: RA01-DE0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   fr:
   - set_number: LED8-FR024
     set_name: 'Legendary Duelists: Synchro Storm'
@@ -85,6 +105,16 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: RA01-FR0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   it:
   - set_number: LED8-IT024
     set_name: 'Legendary Duelists: Synchro Storm'
@@ -95,6 +125,16 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: RA01-IT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   pt:
   - set_number: LED8-PT024
     set_name: 'Legendary Duelists: Synchro Storm'
@@ -105,6 +145,16 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: RA01-PT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   ja:
   - set_number: DP25-JP023
     set_name: 'Duelist Pack: Duelists of Whirlwind'
