--- a/data/cards/24299458.yaml
+++ b/data/cards/24299458.yaml
@@ -62,6 +62,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA01-EN0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   de:
   - set_number: ROTD-DE065
     set_name: Rise of the Duelist
@@ -83,6 +93,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA01-DE0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   fr:
   - set_number: ROTD-FR065
     set_name: Rise of the Duelist
@@ -104,6 +124,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA01-FR0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   it:
   - set_number: ROTD-IT065
     set_name: Rise of the Duelist
@@ -125,6 +155,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA01-IT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   pt:
   - set_number: ROTD-PT065
     set_name: Rise of the Duelist
@@ -146,6 +186,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA01-PT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   ja:
   - set_number: ROTD-JP065
     set_name: Rise of the Duelist
