--- a/data/cards/25311006.yaml
+++ b/data/cards/25311006.yaml
@@ -87,6 +87,16 @@ sets:
     rarities:
     - Ultra Rare
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: RA01-EN0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   de:
   - set_number: ROTD-DE062
     set_name: Rise of the Duelist
@@ -102,6 +112,16 @@ sets:
     rarities:
     - Ultra Rare
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: RA01-DE0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   fr:
   - set_number: ROTD-FR062
     set_name: Rise of the Duelist
@@ -117,6 +137,16 @@ sets:
     rarities:
     - Ultra Rare
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: RA01-FR0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   it:
   - set_number: ROTD-IT062
     set_name: Rise of the Duelist
@@ -132,6 +162,16 @@ sets:
     rarities:
     - Ultra Rare
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: RA01-IT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   pt:
   - set_number: ROTD-PT062
     set_name: Rise of the Duelist
@@ -147,6 +187,16 @@ sets:
     rarities:
     - Ultra Rare
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: RA01-PT0??
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   ja:
   - set_number: ROTD-JP062
     set_name: Rise of the Duelist
