--- a/rush.yaml
+++ b/rush.yaml
@@ -37872,7 +37872,7 @@ name:
   ja: ブレイドザウルス
   ja_romaji: Bureidozaurusu
   ko: 블레이드사우루스
-  ko_rr:
+  ko_rr: Beulleideusauruseu
   zh-TW:
   zh-CN:
 requirement:
