--- a/data/cards/03574681.yaml
+++ b/data/cards/03574681.yaml
@@ -37,7 +37,7 @@ series:
 - Crystal
 images:
 - index: 1
-  image: GoldenRule-23PP-JP-C.png
+  image: GoldenRule-BLMR-EN-ScR-1E.png
 sets:
   en:
   - set_number: BLMR-EN035
