--- a/data/cards/19272658.yaml
+++ b/data/cards/19272658.yaml
@@ -36,7 +36,7 @@ series:
 - Xyz
 images:
 - index: 1
-  image: XyzBento-22PP-JP-C.png
+  image: XyzBento-BLMR-EN-UR-1E.png
 sets:
   en:
   - set_number: BLMR-EN027
