--- a/data/cards/53754104.yaml
+++ b/data/cards/53754104.yaml
@@ -37,7 +37,7 @@ atk: 1000
 def: 2400
 images:
 - index: 1
-  image: GuardMantis-23PP-JP-C.png
+  image: GuardMantis-BLMR-EN-UR-1E.png
 sets:
   en:
   - set_number: BLMR-EN034
