--- a/rush.yaml
+++ b/rush.yaml
@@ -2134,7 +2134,7 @@ images:
 - index: 2
   image: SevensRoadWitch-RD711A-JP-NPR.png
 - index: 3
-  image: SevensRoadWitch-RDAKG3-JP-OP.png
+  image: SevensRoadWitch-RDAKG3-JP-UR.png
 - index: 4
   image: SevensRoadWitch-RDMRP1-JP-R.png
   illustration: SevensRoadWitch-G002-JP-VG-artwork-2.png
@@ -16035,7 +16035,7 @@ images:
   image: IllusionStrikeDragonMiragias-RDSBD2-JP-C.png
   illustration: IllusionStrikeDragonMiragias-DBR-JP-VG-artwork.png
 - index: 2
-  image: IllusionStrikeDragonMiragias-RDAKG4-JP-OP.png
+  image: IllusionStrikeDragonMiragias-RDAKG4-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP03-JP025
@@ -103996,3 +103996,72 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 987033
+---
+konami_id:
+name:
+  en: Harpie Lady 3
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    This card's name becomes "Harpie Lady" while in the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card's name becomes "Harpie Lady" until the end of your opponent's next turn. Then, you can choose 1 face-up Level 8 or lower monster on your opponent's field. If you do, your opponent cannot attack with that monster during their next turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Winged Beast / Effect
+attribute: WIND
+level: 4
+atk: 1300
+def: 1400
+series:
+- Harpie
+images:
+- index: 1
+  image: HarpieLady3-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP006
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Super Rare
+yugipedia_page_id: 987538
