--- a/data/cards/08323633.yaml
+++ b/data/cards/08323633.yaml
@@ -38,7 +38,7 @@ property: Continuous
 images:
 - index: 1
   image: CloakandDagger-STON-JP-R.jpg
-  illustration: CloakandDagger-TF04-JP-VG.jpg
+  illustration: CloakandDagger-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: CloakandDagger-TU03-EN-C-UE.png
   illustration: CloakandDagger-MADU-EN-VG-artwork.png
