--- a/data/cards/68679595.yaml
+++ b/data/cards/68679595.yaml
@@ -8,7 +8,7 @@ name:
   it: Raggio Utopia Leone Finale
   pt: Raio Utopia Leão Definitivo
   ja: <ruby>獣<rt>じゅう</rt></ruby><ruby>装<rt>そう</rt></ruby><ruby>合<rt>がっ</rt></ruby><ruby>体<rt>たい</rt></ruby> ライオ・ホープレイ
-  ja_romaji: Jūsō Gattai Raio Hōpurei
+  ja_romaji: Jūsōgattai Raio Hōpurei
   ko: 수장합체 라이오 호프레이
   ko_rr: Sujanghapche Raio Hopeurei
   zh-TW:
