--- a/data/cards/75402014.yaml
+++ b/data/cards/75402014.yaml
@@ -8,7 +8,7 @@ name:
   it: Raggio Utopia Dragonico Finale
   pt: Raio Utopia Dragônico Definitivo
   ja: <ruby>竜<rt>りゅう</rt></ruby><ruby>装<rt>そう</rt></ruby><ruby>合<rt>がっ</rt></ruby><ruby>体<rt>たい</rt></ruby> ドラゴニック・ホープレイ
-  ja_romaji: Ryūsō Gattai Doragonikku Hōpurei
+  ja_romaji: Ryūsōgattai Doragonikku Hōpurei
   ko: 용장합체 드래고닉 호프레이
   ko_rr: Yongjanghapche Deuraegonik Hopeurei
   zh-TW:
