--- a/data/rush/16326.yaml
+++ b/data/rush/16326.yaml
@@ -50,7 +50,7 @@ series:
 - JAM
 images:
 - index: 1
-  image: CANReD-RDMRP1-JP-R.png
+  image: CANReD-RDS222-JP-ScR.png
 sets:
   ja:
   - set_number: RD/KP05-JP019
