--- a/data/cards/52035300.yaml
+++ b/data/cards/52035300.yaml
@@ -114,6 +114,10 @@ sets:
     set_name: Duelist Edition Volume 2
     rarities:
     - Common
+  - set_number: 23TP-JP305
+    set_name: Tournament Pack 2023 Vol.3
+    rarities:
+    - Common
   ko:
   - set_number: PTDN-KR029
     set_name: Phantom Darkness
