--- a/data/cards/58601383.yaml
+++ b/data/cards/58601383.yaml
@@ -82,6 +82,10 @@ sets:
     set_name: Starstrike Blast
     rarities:
     - Super Rare
+  - set_number: 23TP-JP309
+    set_name: Tournament Pack 2023 Vol.3
+    rarities:
+    - Common
   ko:
   - set_number: STBL-KR039
     set_name: Starstrike Blast
