--- a/data/cards/26050548.yaml
+++ b/data/cards/26050548.yaml
@@ -56,26 +56,31 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: BLMR-DE007
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: BLMR-FR007
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: BLMR-IT007
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: BLMR-PT007
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: 23PR-JP001
     set_name: Promotion Pack 2023
