--- a/data/cards/38120068.yaml
+++ b/data/cards/38120068.yaml
@@ -282,6 +282,10 @@ sets:
     - Super Rare
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: 23TP-JP313
+    set_name: Tournament Pack 2023 Vol.3
+    rarities:
+    - Common
   ko:
   - set_number: SD13-KR018
     set_name: 'Structure Deck: Revival of the Great Dragon'
