--- a/data/cards/77202120.yaml
+++ b/data/cards/77202120.yaml
@@ -77,6 +77,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 713272
