--- a/data/cards/63101468.yaml
+++ b/data/cards/63101468.yaml
@@ -48,7 +48,7 @@ attribute: LIGHT
 level: 10
 atk: 3200
 def: 2600
-materials: 1 Tuner + 1+ non-Tuner Fairy monsters
+materials: 1 Tuner + 1 or more non-Tuner Fairy-Type monsters
 series:
 - Hyperion
 images:
