--- a/data/cards/27191436.yaml
+++ b/data/cards/27191436.yaml
@@ -37,10 +37,10 @@ property: Normal
 images:
 - index: 1
   image: BurstReturn-DP1-JP-SR.jpg
-  illustration: BurstReturn-TF04-JP-VG.jpg
+  illustration: BurstReturn-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: BurstReturn-LCGX-EN-R-1E.png
-  illustration: BurstReturn-TF04-EN-VG.jpg
+  illustration: BurstReturn-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DP1-EN022
