--- a/data/cards/64104037.yaml
+++ b/data/cards/64104037.yaml
@@ -87,6 +87,6 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 715101
