--- a/rush.yaml
+++ b/rush.yaml
@@ -104065,3 +104065,203 @@ sets:
     rarities:
     - Super Rare
 yugipedia_page_id: 987538
+---
+konami_id:
+name:
+  en: Fireyarou
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A malevolent creature wrapped in flames that attacks enemies with intense fire.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Pyro / Normal
+attribute: FIRE
+level: 4
+atk: 1300
+def: 1000
+images:
+- index: 1
+  image: Fireyarou-RDB232-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B232-JP006
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
+yugipedia_page_id: 990305
+---
+konami_id:
+name:
+  en: Gravity Plus Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: グラビティ・プラス・ドラゴン
+  ja_romaji: Gurabiti Purasu Doragon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    1 face-up monster on your field gains ATK equal to [the number of face-up Dragon Type Normal Monsters on your field] x 400 until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: EARTH
+level: 6
+atk: 1600
+def: 1000
+images:
+- index: 1
+  image: GravityPlusDragon-RDB232-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B232-JP008
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
+yugipedia_page_id: 990306
+---
+konami_id:
+name:
+  en: Three Cavalteers
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>三<rt>さん</rt></ruby><ruby>重<rt>じゅう</rt></ruby><ruby>騎<rt>き</rt></ruby>
+  ja_romaji: Sanjūki
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's Level 7 or higher monster declares an attack while you have 3 or more Level 7 or higher monsters in your Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The attacking monster loses 1000 ATK until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: ThreeCavalteers-RDB232-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B232-JP010
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
+yugipedia_page_id: 990307
+---
+konami_id:
+name:
+  en: Gold Rush
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ゴールド・ラッシュ
+  ja_romaji: Gōrudo Rasshu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a Level 7 or higher monster face-up, send all monsters from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 3 cards and show them. Then, if a Level 7 or higher monster is among them, you can Special Summon any number of those Level 7 or higher monsters to your field in face-down Defense Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: GoldRush-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP059
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Common
+yugipedia_page_id: 990323
