--- a/data/rush/yugipedia936324.yaml
+++ b/data/rush/yugipedia936324.yaml
@@ -40,7 +40,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card's name becomes "Harpie Ladies" and it cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, increase its Level by 5.
+    This card's name becomes "Harpie Ladies" and it cannot be destroyed by your opponent's Trap Card effects. Then, if this card is in Maximum Mode, increase its Level by 5.
   de:
   es:
   fr:
