--- a/data/rush/18964.yaml
+++ b/data/rush/18964.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. Until the end of this turn, this card cannot be destroyed by your opponent's Trap Card effects, also it gains ATK equal to [the number of monsters in your Graveyard] x 300.
+    Send the top 3 cards of your Deck to the Graveyard. This turn, this card cannot be destroyed by your opponent's Trap Card effects. Then, this card gains ATK equal to [the number of monsters in your Graveyard] x 300 until the end of this turn.
   de:
   es:
   fr:
