--- a/data/rush/yugipedia978987.yaml
+++ b/data/rush/yugipedia978987.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 500 ATK. Also, if you have 5 or more Wyrm Type monsters in your Graveyard, the equipped monster gains 500 more ATK.
+    The equipped monster gains 500 ATK. Then, if you have 5 or more Wyrm Type monsters in your Graveyard, the equipped monster gains 500 more ATK.
   de:
   es:
   fr:
