--- a/rush.yaml
+++ b/rush.yaml
@@ -76973,7 +76973,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 500 ATK until the end of this turn. Also, if no Spell/Trap Cards are on the field, this card can make up to 2 attacks on monsters this turn.
+    This card gains 500 ATK until the end of this turn. Then, if no Spell/Trap Cards are on the field, this card can make up to 2 attacks on monsters this turn.
   de:
   es:
   fr:
@@ -94380,7 +94380,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 200 ATK/DEF. Also, if the equipped monster is "Master Craftsman Kotetsu" or a Legend monster whose original Level is 4 or lower, it gains ATK equal to [its original ATK].
+    The equipped monster gains 200 ATK/DEF. Then, if the equipped monster is "Master Craftsman Kotetsu" or a Legend monster whose original Level is 4 or lower, it gains ATK equal to [its original ATK].
   de:
   es:
   fr:
@@ -98787,7 +98787,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. Until the end of this turn, this card cannot be destroyed by your opponent's Trap Card effects, also it gains ATK equal to [the number of monsters in your Graveyard] x 300.
+    Send the top 3 cards of your Deck to the Graveyard. This turn, this card cannot be destroyed by your opponent's Trap Card effects. Then, this card gains ATK equal to [the number of monsters in your Graveyard] x 300 until the end of this turn.
   de:
   es:
   fr:
@@ -100191,7 +100191,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster cannot be destroyed by your opponent's card effects. Also, if you have an Equip Spell Card in your Graveyard, the equipped monster gains 300 ATK.
+    The equipped monster cannot be destroyed by your opponent's card effects. Then, if you have an Equip Spell Card in your Graveyard, the equipped monster gains 300 ATK.
   de:
   es:
   fr:
@@ -100965,7 +100965,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 800 ATK and 400 DEF. Also, if you have 1 or 3 face-up monsters on your field, the equipped monster inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
+    The equipped monster gains 800 ATK and 400 DEF. If you have 1 or 3 face-up monsters on your field, the equipped monster inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
   de:
   es:
   fr:
@@ -101103,7 +101103,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card's name becomes "Harpie Ladies" and it cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, increase its Level by 5.
+    This card's name becomes "Harpie Ladies" and it cannot be destroyed by your opponent's Trap Card effects. Then, if this card is in Maximum Mode, increase its Level by 5.
   de:
   es:
   fr:
@@ -101175,7 +101175,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card's name becomes "Harpie Ladies" and it cannot be destroyed by your opponent's monster effects. Also, if this card is in Maximum Mode, it can make up to 3 attacks on monsters each turn.
+    This card's name becomes "Harpie Ladies" and it cannot be destroyed by your opponent's monster effects. Then, if this card is in Maximum Mode, it can make up to 3 attacks on monsters each turn.
   de:
   es:
   fr:
@@ -103159,7 +103159,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 500 ATK. Also, if you have 5 or more Wyrm Type monsters in your Graveyard, the equipped monster gains 500 more ATK.
+    The equipped monster gains 500 ATK. Then, if you have 5 or more Wyrm Type monsters in your Graveyard, the equipped monster gains 500 more ATK.
   de:
   es:
   fr:
@@ -103971,7 +103971,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains ATK equal to [the number of different Types on the field] x 300. Also, if the equipped monster is a Maximum Monster, it cannot be destroyed by your opponent's card effects.
+    The equipped monster gains ATK equal to [the number of different Types on the field] x 300. Then, if the equipped monster is a Maximum Monster, it cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
