--- a/data/cards/35058857.yaml
+++ b/data/cards/35058857.yaml
@@ -8,7 +8,7 @@ name:
   it: Re Magico Lunastella
   pt: Rei Mágico Estrela Lunar
   ja: <ruby>奇<rt>き</rt></ruby><ruby>術<rt>じゅつ</rt></ruby><ruby>王<rt>おう</rt></ruby> ムーン・スター
-  ja_romaji: Kijutsu-ō Mūn Sutā
+  ja_romaji: Kijutsuō Mūn Sutā
   ko: 기술왕 문 스타
   ko_rr:
   zh-TW:
