--- a/data/cards/60023855.yaml
+++ b/data/cards/60023855.yaml
@@ -43,7 +43,7 @@ series:
 - Spider
 images:
 - index: 1
-  image: BabySpider-23PP-JP-C.png
+  image: BabySpider-BLMR-EN-UR-1E.png
 sets:
   en:
   - set_number: BLMR-EN045
@@ -87,6 +87,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 708954
