--- a/data/cards/02752099.yaml
+++ b/data/cards/02752099.yaml
@@ -43,7 +43,7 @@ series:
 - Rose
 images:
 - index: 1
-  image: RoseShaman-23PP-JP-C.png
+  image: RoseShaman-BLMR-EN-UR-1E.png
 sets:
   en:
   - set_number: BLMR-EN040
@@ -87,6 +87,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 708945
