--- a/data/cards/05829717.yaml
+++ b/data/cards/05829717.yaml
@@ -59,26 +59,31 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: BLMR-DE001
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: BLMR-FR001
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: BLMR-IT001
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: BLMR-PT001
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: SUB1-JP001
     set_name: Secret Utility Box
@@ -86,6 +91,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 714470
