--- a/data/cards/19272658.yaml
+++ b/data/cards/19272658.yaml
@@ -82,6 +82,6 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 708450
