--- a/data/cards/34456146.yaml
+++ b/data/cards/34456146.yaml
@@ -49,7 +49,7 @@ series:
 - Sky Striker
 images:
 - index: 1
-  image: SageofBenevolenceCiela-YOS1-JP-UR.png
+  image: SageofBenevolenceCiela-BLMR-EN-UR-1E.png
 sets:
   en:
   - set_number: BLMR-EN051
@@ -90,6 +90,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 715654
