--- a/data/cards/35756798.yaml
+++ b/data/cards/35756798.yaml
@@ -37,7 +37,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: FinalCross-23PP-JP-C.png
+  image: FinalCross-BLMR-EN-UR-1E.png
 sets:
   en:
   - set_number: BLMR-EN041
@@ -81,6 +81,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 708953
