--- a/data/cards/42228966.yaml
+++ b/data/cards/42228966.yaml
@@ -81,6 +81,6 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 708436
