--- a/data/cards/52445243.yaml
+++ b/data/cards/52445243.yaml
@@ -86,32 +86,37 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: BLMR-DE008
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: BLMR-FR008
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: BLMR-IT008
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: BLMR-PT008
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: 23PR-JP002
     set_name: Promotion Pack 2023
     rarities:
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 717238
