--- a/data/cards/53754104.yaml
+++ b/data/cards/53754104.yaml
@@ -85,6 +85,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 708950
