--- a/data/cards/60306277.yaml
+++ b/data/cards/60306277.yaml
@@ -39,7 +39,7 @@ series:
 - Synchro
 images:
 - index: 1
-  image: SynchroZone-23PP-JP-C.png
+  image: SynchroZone-BLMR-EN-ScR-1E.png
 sets:
   en:
   - set_number: BLMR-EN048
@@ -83,6 +83,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 708947
