--- a/data/cards/61245403.yaml
+++ b/data/cards/61245403.yaml
@@ -41,7 +41,7 @@ atk: 1500
 def: 500
 images:
 - index: 1
-  image: Cattycorn-23PP-JP-C.png
+  image: Cattycorn-BLMR-EN-UR-1E.png
 sets:
   en:
   - set_number: BLMR-EN042
@@ -85,6 +85,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 708946
