--- a/data/cards/66367984.yaml
+++ b/data/cards/66367984.yaml
@@ -37,7 +37,7 @@ card_type: Trap
 property: Counter
 images:
 - index: 1
-  image: ProtectionoftheElements-23PP-JP-C.png
+  image: ProtectionoftheElements-BLMR-EN-UR-1E.png
 sets:
   en:
   - set_number: BLMR-EN038
@@ -81,6 +81,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 708952
