--- a/data/cards/77189532.yaml
+++ b/data/cards/77189532.yaml
@@ -76,6 +76,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 716500
