--- a/data/cards/77202120.yaml
+++ b/data/cards/77202120.yaml
@@ -50,26 +50,31 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: BLMR-DE003
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: BLMR-FR003
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: BLMR-IT003
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: BLMR-PT003
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: SUB1-JP003
     set_name: Secret Utility Box
@@ -77,6 +82,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 713272
