--- a/data/cards/96795312.yaml
+++ b/data/cards/96795312.yaml
@@ -49,7 +49,7 @@ series:
 - Sky Striker
 images:
 - index: 1
-  image: SageofStrengthAkash-23PP-JP-C.png
+  image: SageofStrengthAkash-BLMR-EN-UR-1E.png
 sets:
   en:
   - set_number: BLMR-EN049
@@ -93,6 +93,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 717443
