--- a/data/cards/97417863.yaml
+++ b/data/cards/97417863.yaml
@@ -65,7 +65,7 @@ series:
 - D/D/D
 images:
 - index: 1
-  image: DDDDSuperDimensionalSovereignEmperorZeroParadox-23PP-JP-C.png
+  image: DDDDSuperDimensionalSovereignEmperorZeroParadox-BLMR-EN-UR-1E.png
 sets:
   en:
   - set_number: BLMR-EN046
@@ -109,6 +109,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 708955
