--- a/data/cards/97639441.yaml
+++ b/data/cards/97639441.yaml
@@ -43,7 +43,7 @@ series:
 - Photon
 images:
 - index: 1
-  image: PhotonJumper-23PP-JP-C.png
+  image: PhotonJumper-BLMR-EN-ScR-1E.png
 sets:
   en:
   - set_number: BLMR-EN043
@@ -87,6 +87,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 708940
