--- a/data/cards/98462037.yaml
+++ b/data/cards/98462037.yaml
@@ -55,7 +55,7 @@ series:
 - Sky Striker Ace
 images:
 - index: 1
-  image: SkyStrikerAceAzalea-VJMP-JP-UR.png
+  image: SkyStrikerAceAzalea-BLMR-EN-ScR-1E.png
 sets:
   en:
   - set_number: BLMR-EN052
@@ -96,6 +96,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 716725
