--- a/data/cards/18377261.yaml
+++ b/data/cards/18377261.yaml
@@ -32,9 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 장착 카드를 장착하고 있지 않을 경우, 이 카드의 전투로 발생하는 자신에게로의 전투 데미지는 0 이 되고, 장착하고 있을 경우, 이 카드는 전투로는 파괴되지 않으며, 이 카드의 전투로 발생하는 자신에게로의 전투 데미지는 대신에 상대가 받는다. ②: 이 카드에 장착 카드가 장착되었을 경우에 발동할 수 있다. 덱에서 "미캉코" 장착 마법 카드 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的②的效果1回合只能使用1次。
-    ①：这张卡没有装备卡装备的场合，这张卡的战斗发生的对自己的战斗伤害变成0，有装备的场合，这张卡不会被战斗破坏，这张卡的战斗发生的对自己的战斗伤害由对方代受。
-    ②：这张卡有装备卡被装备的场合才能发动。从卡组把1张「御巫」装备魔法卡加入手卡。
+    此卡名的②效果１回合仅可使用１次。①：此卡未装备装备卡的情况下，因此卡的战斗对自己造成的战斗伤害变为０，有装备的情况下，此卡不会因战斗被破坏，因此卡的战斗对自己造成的战斗伤害由对手代为承受。②：此卡被装备装备卡的情况下可以发动。从牌组将１张“御巫”装备魔法卡加入手牌。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: FIRE
@@ -87,6 +85,12 @@ sets:
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: DBAD-SC025
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Super Rare
+    - Collector's Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
