--- a/data/cards/00572850.yaml
+++ b/data/cards/00572850.yaml
@@ -94,6 +94,11 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP7-SC133
+    set_name: Mega Pack 07
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Limited
   ocg: Limited
