--- a/data/cards/02295440.yaml
+++ b/data/cards/02295440.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     可从手牌将1只怪兽送入墓地进行发动。从手牌、牌组特殊召唤1只等级1的怪兽。
   zh-CN: |-
-    ①：从手牌将1只怪兽送至墓地可以发动。从手牌・牌组将1只等级1的怪兽特殊召唤。
+    ①：从手牌将１只怪兽送至墓地可以发动。从手牌・牌组将１只等级１的怪兽特殊召唤。
 card_type: Spell
 property: Normal
 images:
@@ -375,6 +375,14 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts of Chaos'
     rarities:
     - Common
+  - set_number: SD28-SC032
+    set_name: 'Structure Deck: Synchron Extreme'
+    rarities:
+    - Common
+  - set_number: DBAD-SC040
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Limited
   ocg: Limited
