--- a/data/cards/04796100.yaml
+++ b/data/cards/04796100.yaml
@@ -186,6 +186,11 @@ sets:
     set_name: 'Memories of the Duel King: Battle City Arc'
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: DUNE-SC100
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
