--- a/data/cards/27068117.yaml
+++ b/data/cards/27068117.yaml
@@ -12,7 +12,7 @@ name:
   ko: 오버레이 리제너레이트
   ko_rr:
   zh-TW: 疊放再生
-  zh-CN: 叠光再生
+  zh-CN: 叠放再生
 text:
   en: |-
     Target 1 face-up Xyz Monster on the field; attach this card to it as material.
@@ -31,9 +31,9 @@ text:
   ko: |-
     필드 위에 존재하는 엑시즈 몬스터 1장을 선택하고 발동할 수 있다. 이 카드를 선택한 몬스터의 아래에 겹쳐 엑시즈 소재로 한다.
   zh-TW: |-
-    可选择存在于场上的1只超量怪兽并发动。此卡重叠至被选择怪兽的下方成为超量素材。
+    可選擇存在於場上的1隻超量怪獸並發動。此卡重疊至被選擇怪獸的下方成為超量素材。
   zh-CN: |-
-    选择场上存在的1只XYZ怪兽才能发动。把这张卡在选择的怪兽下面重叠作为XYZ素材。
+    ①：以场上的１只超量怪兽为对象可以发动。将此卡重叠在该怪兽下方作为超量素材。
 card_type: Spell
 property: Normal
 series:
@@ -98,6 +98,12 @@ sets:
     set_name: Return of the Duelist
     rarities:
     - Rare
+  zh-CN:
+  - set_number: DBAD-SC056
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
