--- a/data/cards/37478723.yaml
+++ b/data/cards/37478723.yaml
@@ -12,7 +12,7 @@ name:
   ko: 『불꽃성검－듀란달』
   ko_rr: '"Bulkkotseonggeom - Dyurandal"'
   zh-TW:
-  zh-CN: 『焰圣剑-杜兰达尔』
+  zh-CN: 『焰圣剑－杜兰德尔』
 text:
   en: |-
     While this card is equipped to a monster: You can add 1 Level 5 or lower FIRE Warrior monster from your Deck to your hand, then destroy this card. If this card is sent to the GY because the equipped monster is sent to the GY: You can target 1 Level 5 or lower FIRE Warrior monster in your GY; Special Summon it, also you cannot Special Summon monsters for the rest of this turn, except Warrior monsters. You can only use 1 ""Infernoble Arms - Durendal"" effect per turn, and only once that turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 이 카드가 장착되어 있을 경우에 발동할 수 있다. 덱에서 레벨 5 이하의 전사족 / 화염 속성 몬스터 1장을 패에 넣는다. 그 후, 이 카드를 파괴한다. ②: 장착 몬스터가 묘지로 보내진 것으로 이 카드가 묘지로 보내졌을 경우, 자신 묘지의 레벨 5 이하의 전사족 / 화염 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 전사족 몬스터밖에 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合只能有1次使用其中任意1个。
-    ①：这张卡装备中的场合才能发动。从卡组把1只5星以下的战士族·炎属性怪兽加入手卡。那之后，这张卡破坏。
-    ②：装备怪兽被送去墓地让这张卡被送去墓地的场合，以自己墓地1只5星以下的战士族·炎属性怪兽为对象才能发动。那只怪兽特殊召唤。这个效果的发动后，直到回合结束时自己不是战士族怪兽不能特殊召唤。
+    此卡名的①②效果１回合１次，仅可使用其中１个。①：此卡被装备中的情况下可以发动。从牌组将１只等级５以下的战士族・炎属性怪兽加入手牌。然后破坏此卡。②：因装备怪兽被送至墓地导致此卡被送至墓地的情况下，以自己墓地１只等级５以下的战士族・炎属性怪兽为对象可以发动。将该怪兽特殊召唤。此效果发动后，直至回合结束时为止自己仅可特殊召唤战士族怪兽。
 card_type: Spell
 property: Equip
 series:
@@ -125,6 +123,16 @@ sets:
     rarities:
     - Rare
   - set_number: DBAD-KR042
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
+  zh-CN:
+  - set_number: MGP5-SC043
+    set_name: Mega Pack 05
+    rarities:
+    - Rare
+  - set_number: DBAD-SC042
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Common
