--- a/data/cards/42052439.yaml
+++ b/data/cards/42052439.yaml
@@ -12,7 +12,7 @@ name:
   ko: 키리비 레이디
   ko_rr: Kiribi Reidi
   zh-TW:
-  zh-CN: 切火女郎
+  zh-CN: 取火女郎
 text:
   en: |-
     If you control a Warrior monster: You can Special Summon this card from your hand. You can send this card from the field to the GY; Special Summon 1 Level 4 or lower Warrior monster from your hand, and if you do, your opponent cannot target it with card effects this turn. You can only use each effect of "Fire Flint Lady" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 전사족 몬스터가 존재할 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 필드의 이 카드를 묘지로 보내고 발동할 수 있다. 패에서 레벨 4 이하의 전사족 몬스터 1장을 특수 소환한다. 이 효과로 특수 소환한 몬스터는, 이 턴에 상대 효과의 대상이 되지 않는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：自己场上有战士族怪兽存在的场合才能发动。这张卡从手卡特殊召唤。
-    ②：把场上的这张卡送去墓地才能发动。从手卡把1只4星以下的战士族怪兽特殊召唤。这个效果特殊召唤的怪兽在这个回合不会成为对方的效果的对象。
+    此卡名的①②效果１回合仅可各使用１次。①：自己场上有战士族怪兽存在的情况下可以发动。从手牌将此卡特殊召唤。②：将场上的此卡送至墓地可以发动。从手牌将１只等级４以下的战士族怪兽特殊召唤。以此效果特殊召唤的怪兽在此回合不会成为对手效果的对象。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: FIRE
@@ -84,6 +82,12 @@ sets:
     set_name: Collection Pack 2020
     rarities:
     - Rare
+  zh-CN:
+  - set_number: DBAD-SC051
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
