--- a/data/cards/44649322.yaml
+++ b/data/cards/44649322.yaml
@@ -12,7 +12,7 @@ name:
   ko: 전승의 대미캉코
   ko_rr: Cheonseung-ui Daemikangko
   zh-TW:
-  zh-CN: 传承的大御巫
+  zh-CN: 传承之大御巫
 text:
   en: |-
     Special Summon 1 "Mikanko" monster from your hand, ignoring its Summoning conditions, but return it to the hand during your opponent's End Phase. During your Main Phase: You can banish this card from your GY; send 1 "Mikanko" card from your Deck to the GY, except "The Great Mikanko Ceremony". You can only use each effect of "The Great Mikanko Ceremony" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패에서 "미캉코" 몬스터 1장을 소환 조건을 무시하고 특수 소환한다. 이 효과로 특수 소환한 몬스터는 상대 엔드 페이즈에 주인의 패로 되돌아간다. ②: 자신 메인 페이즈에 묘지의 이 카드를 제외하고 발동할 수 있다. 덱에서 "전승의 대미캉코" 이외의 "미캉코" 카드 1장을 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：从手卡把1只「御巫」怪兽无视召唤条件特殊召唤。这个效果特殊召唤的怪兽在对方结束阶段回到持有者手卡。
-    ②：自己主要阶段把墓地的这张卡除外才能发动。从卡组把「传承的大御巫」以外的1张「御巫」卡送去墓地。
+    此卡名的①②效果１回合仅可各使用１次。①：从手牌将１只“御巫”怪兽无视召唤条件特殊召唤。以此效果特殊召唤的怪兽将在对手的结束阶段放回持有者的手牌。②：在自己的主要阶段将墓地的此卡除外可以发动。从牌组将“传承之大御巫”以外的１张“御巫”卡送至墓地。
 card_type: Spell
 property: Quick-Play
 series:
@@ -80,6 +78,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: DBAD-SC029
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
