--- a/data/cards/54562327.yaml
+++ b/data/cards/54562327.yaml
@@ -73,6 +73,11 @@ sets:
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: DUNE-SC112
+    set_name: Duelist Nexus
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
