--- a/data/cards/67523044.yaml
+++ b/data/cards/67523044.yaml
@@ -68,6 +68,11 @@ sets:
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: DUNE-SC111
+    set_name: Duelist Nexus
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
