--- a/data/cards/36304921.yaml
+++ b/data/cards/36304921.yaml
@@ -96,6 +96,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon
     rarities:
     - Common
+  - set_number: DDY-F015
+    set_name: 'Starter Deck: Yugi'
+    rarities:
+    - Common
   - set_number: LOB-FR072
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
