--- a/data/cards/80741828.yaml
+++ b/data/cards/80741828.yaml
@@ -136,6 +136,10 @@ sets:
     set_name: Beginner's Edition 2
     rarities:
     - Common
+  - set_number: BE02-JP054
+    set_name: Beginner's Edition 2 (2011)
+    rarities:
+    - Common
   - set_number: HD13-JPD06
     set_name: 'Half-Deck: DARK'
     rarities:
