--- a/data/cards/92565383.yaml
+++ b/data/cards/92565383.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 玉米田羽蛇神
 text:
   en: |-
-    If this card battles a monster, neither monster can be destroyed by that battle. You can only use each of the following effects of "Cornfield Koator" once per turn. You can discard this card; add 1 monster that mentions "Chimera Fusion" from your Deck to your hand, except "Cornfield Koator". When your opponent activates a card or effect that targets a card(s) you control while you control "Chimera the Flying Mythical Beast" (Quick Effect): You can banish this card from your field or GY; negate that effect, and if you do, destroy that card.
+    If this card battles a monster, neither can be destroyed by that battle. You can only use each of the following effects of "Cornfield Koator" once per turn. You can discard this card; add 1 monster that mentions "Chimera Fusion" from your Deck to your hand, except "Cornfield Koator". When your opponent activates a card or effect that targets a card(s) you control while you control "Chimera the Flying Mythical Beast" (Quick Effect): You can banish this card from your field or GY; negate that effect, and if you do, destroy that card.
   de:
   es:
   fr:
