--- a/data/cards/38264974.yaml
+++ b/data/cards/38264974.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     "Chimera the Flying Mythical Beast" + 1+ Illusion monsters
-    This card's name becomes "Chimera the Flying Mythical Beast", and is treated as a "Phantom Beast" card, while on the field or in the GY. This card can make attacks on monsters each Battle Phase, up to the number of Fusion Materials used for its Summon. If this card battles a monster, neither monster can be destroyed by that battle. If this card battled an opponent's monster, at the end of the Damage Step: You can change that opponent's monster's ATK to 0, also negate its effects.
+    This card's name becomes "Chimera the Flying Mythical Beast", and is treated as a "Phantom Beast" card, while on the field or in the GY. This card can make attacks on monsters each Battle Phase, up to the number of Fusion Materials used for its Summon. If this card battles a monster, neither can be destroyed by that battle. At the end of the Damage Step, if this card battled an opponent's monster: You can change that opponent's monster's ATK to 0, also negate its effects.
   de:
   es:
   fr:
