--- a/data/cards/40221691.yaml
+++ b/data/cards/40221691.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 幻惑之魔术师
 text:
   en: |-
-    If this card battles a monster, neither monster can be destroyed by that battle. At the end of the Damage Step, if this card battled an opponent's monster: You can take control of that opponent's monster. Once per turn, at the start of the Damage Step, if another monster attacks: You can destroy 1 card on the field.
+    If this card battles a monster, neither can be destroyed by that battle. At the end of the Damage Step, if this card battled an opponent's monster: You can take control of that opponent's monster. Once per turn, at the start of the Damage Step, if another monster attacks: You can destroy 1 card on the field.
   de:
   es:
   fr:
@@ -37,6 +37,31 @@ images:
 - index: 1
   image: NightmareMagician-DUNE-JP-UR.png
 sets:
+  en:
+  - set_number: DUNE-EN025
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: DUNE-DE025
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: DUNE-FR025
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: DUNE-IT025
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: DUNE-PT025
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
   ja:
   - set_number: DUNE-JP025
     set_name: Duelist Nexus
@@ -46,6 +71,19 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP025
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR025
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR025
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Ultra Rare
