--- a/data/cards/45467446.yaml
+++ b/data/cards/45467446.yaml
@@ -8,7 +8,7 @@ name:
   it: Drago Spirito del Bianco
   pt: Espírito Dragão de Branco
   ja: <ruby>白<rt>しろ</rt></ruby>き<ruby>霊<rt>れい</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>
-  ja_romaji: Shirokireiryū
+  ja_romaji: Shiroki Reiryū
   ko: 하얀 영룡
   ko_rr: Hayan Yeongnyong
   zh-TW:
