--- a/data/cards/33099732.yaml
+++ b/data/cards/33099732.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>未<rt>み</rt></ruby><ruby>来<rt>らい</rt></ruby><ruby>融<rt>ゆう</rt></ruby><ruby>合<rt>ごう</rt></ruby>－オーバーフューチャー・フュージョン
-  ja_romaji: Chō Mirai Yūgō - Ōbā Fyūchā Fyūjon
+  ja_romaji: Chōmirai Yūgō - Ōbāfyūchā Fyūjon
   ko:
   ko_rr:
   zh-TW:
