--- a/data/cards/63436931.yaml
+++ b/data/cards/63436931.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>赤<rt>あか</rt></ruby>き<ruby>竜<rt>りゅう</rt></ruby>
-  ja_romaji: Akakiryū
+  ja_romaji: Akaki Ryū
   ko:
   ko_rr:
   zh-TW:
