--- a/data/cards/38339996.yaml
+++ b/data/cards/38339996.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>R－ACE<rt>레스큐 에이스</rt></ruby> 임펄스
   ko_rr: Reseukyu Eiseu Impeolseu
   zh-TW:
-  zh-CN: 救援ACE队 脉冲灭火员
+  zh-CN: 救援王牌 脉冲消防员
 text:
   en: |-
     During your Main Phase: You can choose the 1 Effect Monster your opponent controls with the highest ATK (your choice, if tied), and neither player can activate that monster's effects on the field this turn. When your opponent activates a monster effect on the field (Quick Effect): You can Tribute this card from your hand or face-up field; Special Summon 1 Machine "Rescue-ACE" monster from your Deck. You can only use each effect of "Rescue-ACE Impulse" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 상대 필드의 공격력이 가장 높은 효과 몬스터 1장을 고른다. 이 턴에, 그 몬스터는 필드에서 발동하는 효과를 발동할 수 없다. ②: 상대가 필드의 몬스터의 효과를 발동했을 때, 패 / 필드의 이 카드를 릴리스하고 발동할 수 있다. 덱에서 기계족의 "R－ACE(레스큐 에이스)" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：自己主要阶段才能发动。选对方场上1只攻击力最高的效果怪兽。这个回合，那只怪兽不能把场上发动的效果发动。
-    ②：对方把场上的怪兽的效果发动时，把手卡·场上的这张卡解放才能发动。从卡组把1只机械族「救援ACE队」怪兽特殊召唤。
+    此卡名的①②效果１回合仅可各使用１次。①：在自己的主要阶段可以发动。挑选对手场上１只攻击力最高的效果怪兽。此回合，该怪兽不可发动在场上发动的效果。②：对手发动场上的怪兽的效果时，解放手牌・场上的此卡可以发动。从牌组将１只机械族的“救援王牌”怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: FIRE
@@ -82,6 +80,12 @@ sets:
     set_name: 'Deck Build Pack: Amazing Defenders'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: DBAD-SC001
+    set_name: 'Deck Build Pack: Amazing Defenders'
+    rarities:
+    - Super Rare
+    - Collector's Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
