--- a/rush.yaml
+++ b/rush.yaml
@@ -31327,7 +31327,7 @@ name:
   it:
   pt:
   ja: <ruby>鳥<rt>ちょう</rt></ruby><ruby>呪<rt>じゅ</rt></ruby><ruby>戦<rt>せん</rt></ruby><ruby>術<rt>じゅつ</rt></ruby>
-  ja_romaji: Chōju Senjutsu
+  ja_romaji: Chōjusenjutsu
   ko: 조주전술
   ko_rr:
   zh-TW:
