--- a/data/rush/19109.yaml
+++ b/data/rush/19109.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>環<rt>かん</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>楽<rt>がっ</rt></ruby><ruby>鬼<rt>き</rt></ruby><ruby>神<rt>しん</rt></ruby>トランスゴッドブレス
-  ja_romaji: Kangengakkishin Toransugoddoburesu
+  ja_romaji: Kangengakkishin Toransu Goddoburesu
   ko:
   ko_rr:
   zh-TW:
