--- a/data/cards/65892585.yaml
+++ b/data/cards/65892585.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18671
 password: 65892585
 name:
   en: Gold Pride - Chariot Carrie
@@ -82,6 +82,6 @@ sets:
     - Ultra Rare
     - Starlight Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 930202
