--- a/data/cards/71407486.yaml
+++ b/data/cards/71407486.yaml
@@ -8,7 +8,7 @@ name:
   it: Fireyarou
   pt: Fireyarou
   ja: <ruby>炎<rt>ほのお</rt></ruby>の<ruby>魔<rt>ま</rt></ruby><ruby>神<rt>じん</rt></ruby>
-  ja_romaji: Honoo no Majin
+  ja_romaji: Honō no Majin
   ko: 화염의 마신
   ko_rr:
   zh-TW:
