--- a/data/cards/91323605.yaml
+++ b/data/cards/91323605.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 15469
 password: 91323605
 name:
   en: How Did Dai Get Here?
@@ -63,6 +63,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 930393
