--- a/data/cards/93125329.yaml
+++ b/data/cards/93125329.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18666
 password: 93125329
 name:
   en: Golden Cloud Beast - Malong
@@ -75,6 +75,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 930394
