--- a/data/cards/27275398.yaml
+++ b/data/cards/27275398.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18673
 password: 27275398
 name:
   en: Gold Pride - Pedal to the Metal!
@@ -65,6 +65,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 930204
