--- a/data/cards/28497830.yaml
+++ b/data/cards/28497830.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18670
 password: 28497830
 name:
   en: Gold Pride - Pin Baller
@@ -77,6 +77,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 930201
