--- a/data/cards/29510428.yaml
+++ b/data/cards/29510428.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18667
 password: 29510428
 name:
   en: Imperial Princess Quinquery
@@ -75,6 +75,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 930392
