--- a/data/cards/54670997.yaml
+++ b/data/cards/54670997.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18674
 password: 54670997
 name:
   en: Gold Pride - Better Luck Next Time!
@@ -65,6 +65,6 @@ sets:
     rarities:
     - Secret Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 930205
