--- a/data/cards/65914127.yaml
+++ b/data/cards/65914127.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18668
 password: 65914127
 name:
   en: Pendulum Pendant
@@ -65,6 +65,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 930391
