--- a/data/cards/66736715.yaml
+++ b/data/cards/66736715.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18665
 password: 66736715
 name:
   en: Moissa Knight, the Comet General
@@ -86,6 +86,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 930395
