--- a/data/cards/90164606.yaml
+++ b/data/cards/90164606.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18675
 password: 90164606
 name:
   en: Gold Pride - It's Neck and Neck!
@@ -65,6 +65,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 930206
