--- a/data/cards/91286284.yaml
+++ b/data/cards/91286284.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18672
 password: 91286284
 name:
   en: Gold Pride - That Came Out of Nowhere!
@@ -65,6 +65,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 930203
