--- a/data/cards/92003832.yaml
+++ b/data/cards/92003832.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18669
 password: 92003832
 name:
   en: Gold Pride - Roller Baller
@@ -69,6 +69,6 @@ sets:
     rarities:
     - Secret Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 930200
